--- a/package.json
+++ b/package.json
@@ -1,35 +1,48 @@
 {
-  "name": "blk-design-system-pro-react",
-  "version": "1.2.0",
+  "name": "blk-dashboard-pro-react",
+  "version": "1.1.0",
   "private": true,
+  "homepage": "https://demos.creative-tim.com/black-dashboard-pro-react/#/admin/dashboard",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.15.1",
-    "@testing-library/jest-dom": "5.11.6",
-    "@testing-library/react": "11.2.2",
-    "@testing-library/user-event": "12.2.2",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.4",
     "bootstrap": "4.5.3",
-    "chart.js": "^3.5.1",
-    "eslint-plugin-flowtype": "5.2.0",
-    "headroom.js": "0.12.0",
+    "chart.js": "2.9.4",
+    "classnames": "^2.3.1",
+    "cryptowatch": "^0.1.0",
+    "cw-sdk-node": "^1.0.0-beta.9",
+    "fontawesome": "^5.6.3",
+    "fortawesome": "^0.0.1-security",
+    "http-proxy-middleware": "^2.0.1",
+    "match-sorter": "6.0.2",
     "moment": "2.29.1",
     "node-sass": "4.14.1",
     "node-sass-package-importer": "5.3.2",
     "nouislider": "14.6.3",
-    "react": "17.0.1",
-    "react-chartjs-2": "^3.0.5",
+    "perfect-scrollbar": "1.4.0",
+    "prop-types": "15.7.2",
+    "react": "^17.0.2",
+    "react-big-calendar": "0.30.0",
+    "react-bootstrap-sweetalert": "5.2.0",
+    "react-bootstrap-wizard": "0.0.9",
+    "react-chartjs-2": "2.11.1",
     "react-datetime": "3.0.4",
-    "react-dom": "17.0.1",
-    "react-router": "5.2.0",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.1",
+    "react-dom": "^17.0.2",
+    "react-jvectormap": "^0.0.16",
+    "react-notification-alert": "0.0.13",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "4.0.3",
     "react-select": "3.1.1",
-    "react-slick": "0.27.13",
+    "react-table": "7.6.2",
     "reactstrap": "8.7.1",
-    "web-vitals": "1.0.1"
+    "sass": "^1.42.1",
+    "web-vitals": "^1.0.1"
   },
-  "optionalDependencies": {
-    "jquery": "3.5.1",
-    "typescript": "4.1.2"
+  "devDependencies": {
+    "gulp": "4.0.2",
+    "gulp-append-prepend": "1.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
